--- a/theme/templates/index_rst.html
+++ b/theme/templates/index_rst.html
@@ -1,8 +1,3 @@
-{% extends "layout/layout.html" %}
-{% block content %}
-<main role="main" class="article">
-  {% for page in hidden_pages if page.slug == "index" %}
-  <div class="main-content">{{ page.content }}</div>
-  {% endfor %}
-</main>
-{% endblock %}
+{% extends "layout/content.html" %}
+{% set content_css_class = "article" %}
+{% set article = (hidden_pages|hidden_pages_get_page_with_slug_index) %}
