--- a/theme/styling/style.scss
+++ b/theme/styling/style.scss
@@ -262,3 +262,9 @@ a {
   padding: 3px;
   float: right;
 }
+
+// reStructuredText footnote and citation
+a.citation-reference, a.footnote-reference {
+  vertical-align: super;
+  font-size: smaller;
+}
