--- a/theme/styling/_css4rst.scss
+++ b/theme/styling/_css4rst.scss
@@ -187,3 +187,9 @@ table.docutils {
     pre { margin: 0; }
   }
 }
+
+// reStructuredText footnote and citation
+a.citation-reference, a.footnote-reference {
+  vertical-align: super;
+  font-size: smaller;
+}
