fix wrong format

--- a/theme/styling/style.scss
+++ b/theme/styling/style.scss
@@ -233,7 +233,7 @@ a {
       color: rgb(0, 0, 238);
       padding: 0 .75em 0 .75em;
       background-color: #CCFFCC;
-      border-radius: 3px, 3px;
+      border-radius: 3px;
     }
   }
 }
