--- a/theme/templates/layout/includes/i18n.html
+++ b/theme/templates/layout/includes/i18n.html
@@ -8,6 +8,7 @@
     {%- elif string == 'Authors' -%} 作者
     {%- elif string == 'Author' -%} 作者
     {%- elif string == 'Tags' -%} 標籤
+    {%- elif string == 'Updated' -%} 更新
     {%- elif string == 'Translation(s)' -%} 翻譯
     {%- elif string == 'Edit on Github' -%} 在Github上編輯
     {%- else -%}
@@ -20,6 +21,7 @@
     {%- elif string == 'Authors' -%} ผู้เขียน
     {%- elif string == 'Author' -%} ผู้เขียน
     {%- elif string == 'Tags' -%} แท็ก
+    {%- elif string == 'Updated' -%} การปรับปรุง
     {%- elif string == 'Translation(s)' -%} การแปล
     {%- elif string == 'Edit on Github' -%} แก้ไขที่ Github
     {%- else -%}
