--- a/theme/templates/layout/includes/list_articles.html
+++ b/theme/templates/layout/includes/list_articles.html
@@ -1,4 +1,5 @@
 {%- from 'layout/includes/time.html' import Gregorian_calendar -%}
+{%- from 'layout/includes/i18n.html' import gettext -%}
 {% for article in (articles_page.object_list if articles_page else articles) %}
 <article class="post">
   <header>
