--- a/theme/templates/layout/layout.html
+++ b/theme/templates/layout/layout.html
@@ -23,27 +23,9 @@
   <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ relpath_to_site(DEFAULT_LANG, main_lang) }}/theme/css/style.css">
 </head>
 <body>
-
-<div>
-  {% include 'layout/includes/top_nav.html' %}
-  {%- block content -%}{%- endblock -%}
-</div>
-<div class="layout-footer">Powered by
-  <a href="https://pages.github.com/">Github Pages</a>,
-  <a href="http://blog.getpelican.com/">Pelican</a>,
-  <a href="https://github.com/Kronuz/pyScss">pyScss</a>.
-</div>
-{%- if GOOGLE_ANALYTICS -%}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{ GOOGLE_ANALYTICS }}', 'auto');
-  ga('send', 'pageview');
-
-</script>
-{%- endif -%}
+{% include 'layout/includes/top_nav.html' %}
+{%- block content -%}{%- endblock -%}
+{% include 'layout/includes/footer.html' %}
+{% include 'layout/includes/analytics.html' %}
 </body>
 </html>
