--- a/theme/templates/layout/layout.html
+++ b/theme/templates/layout/layout.html
@@ -24,8 +24,10 @@
 </head>
 <body>
 {% include 'layout/includes/top_nav.html' %}
+{% if GOOGLE_CSE %}<gcse:search></gcse:search>{% endif %}
 {%- block content -%}{%- endblock -%}
 {% include 'layout/includes/footer.html' %}
+{% include 'layout/includes/cse.html' %}
 {% include 'layout/includes/analytics.html' %}
 </body>
 </html>
