css align right

--- a/theme/styling/_css4rst.scss
+++ b/theme/styling/_css4rst.scss
@@ -105,6 +105,11 @@ p.rubric {
   text-align: center;
 }
 
+.align-right {
+  clear: both;
+  text-align: right;
+}
+
 .default-image-align-center {
   display: block;
   margin-left: auto;
