--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -1,9 +1,9 @@
 {% extends "layout/layout.html" %}
-{% block title %}{{ gettext('Archives', DEFAULT_LANG) }} - {{ super() }}{% endblock %}
+{% block title %}{{ 'Archives'|gettext(DEFAULT_LANG) }} - {{ super() }}{% endblock %}
 {% block content %}
 <section class="archives">
   <header>
-    <h1>{{ gettext('Archives', DEFAULT_LANG) }} - {{ SITENAME }}</h1>
+    <h1>{{ 'Archives'|gettext(DEFAULT_LANG) }} - {{ SITENAME }}</h1>
   </header>
 
   <dl>
@@ -11,7 +11,7 @@
       <dt>
         {{ Gregorian_calendar(article.date) }}
         {% if article.modified -%}
-        ({{ gettext('Updated', DEFAULT_LANG) }}: {{ Gregorian_calendar(article.modified) }})
+        ({{ 'Updated'|gettext(DEFAULT_LANG) }}: {{ Gregorian_calendar(article.modified) }})
         {%- endif -%}
       </dt>
       <dd><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></dd>
