--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -13,7 +13,7 @@
 <aside>
   {%- if article.modified -%}
   <time datetime="{{ article.modified.isoformat() }}">
-    {{ gettext('Updated', DEFAULT_LANG) }}: {{ Gregorian_calendar(article.modified) }}
+    {{ 'Updated'|gettext(DEFAULT_LANG) }}: {{ Gregorian_calendar(article.modified) }}
   </time>
   {%- else -%}
   <time datetime="{{ article.date.isoformat() }}">
@@ -26,7 +26,7 @@
 {%- block article_metadata -%}
   <hr>
   {%- if article.author -%}
-  <address><b>{{ gettext('Author', DEFAULT_LANG) }}</b>:
+  <address><b>{{ 'Author'|gettext(DEFAULT_LANG) }}</b>:
     <a rel="author"
        href="{{ SITEURL }}/{{ article.author.url }}">
       {{- article.author -}}
@@ -36,14 +36,14 @@
 
   {%- if article.category -%}
   <aside>
-    <i>&isin;</i> <b>{{ gettext('Category', DEFAULT_LANG) }}</b>:
+    <i>&isin;</i> <b>{{ 'Category'|gettext(DEFAULT_LANG) }}</b>:
     <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
   </aside>
   {%- endif -%}
 
   {%- if article.tags -%}
   <aside>
-    <i>&sum;</i> <b>{{ gettext('Tags', DEFAULT_LANG) }}</b>:
+    <i>&sum;</i> <b>{{ 'Tags'|gettext(DEFAULT_LANG) }}</b>:
     {% for tag in article.tags %}
       <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
       {% if not loop.last %}, {% endif %}
