--- a/theme/templates/author.html
+++ b/theme/templates/author.html
@@ -1,7 +1,6 @@
 {% extends "layout/group.html" %}
-{%- from 'layout/includes/i18n.html' import gettext -%}
 
-{% set groups_name = gettext('Authors', DEFAULT_LANG) %}
+{% set groups_name = ('Authors'|gettext(DEFAULT_LANG)) %}
 {% set groups_partial_url = AUTHORS_URL | default('authors.html') %}
 {% set group = author %}
 {% set group_css_class = "author" %}
