--- a/theme/templates/authors.html
+++ b/theme/templates/authors.html
@@ -1,6 +1,5 @@
 {% extends "layout/groups.html" %}
-{%- from 'layout/includes/i18n.html' import gettext -%}
 
 {% set groups = authors %}
-{% set groups_name = gettext('Authors', DEFAULT_LANG) %}
+{% set groups_name = ('Authors'|gettext(DEFAULT_LANG)) %}
 {% set groups_css_class = "authors" %}
