--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -1,6 +1,5 @@
 {% extends "layout/groups.html" %}
-{%- from 'layout/includes/i18n.html' import gettext -%}
 
 {% set groups = categories %}
-{% set groups_name = gettext('Categories', DEFAULT_LANG) %}
+{% set groups_name = ('Categories'|gettext(DEFAULT_LANG)) %}
 {% set groups_css_class = "categories" %}
