--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -1,7 +1,6 @@
 {% extends "layout/group.html" %}
-{%- from 'layout/includes/i18n.html' import gettext -%}
 
-{% set groups_name = gettext('Categories', DEFAULT_LANG) %}
+{% set groups_name = ('Categories'|gettext(DEFAULT_LANG)) %}
 {% set groups_partial_url = CATEGORIES_URL | default('categories.html') %}
 {% set group = category %}
 {% set group_css_class = "category" %}
