--- a/theme/templates/layout/includes/top_nav.html
+++ b/theme/templates/layout/includes/top_nav.html
@@ -9,10 +9,10 @@
         <a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a>
       {%- endfor -%}
       {% endif %}
-        <a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">{{ gettext('Archives', DEFAULT_LANG) }}</a>
-        <a href="{{ SITEURL }}/{{ CATEGORIES_URL | default('categories.html') }}">{{ gettext('Categories', DEFAULT_LANG) }}</a>
-        <a href="{{ SITEURL }}/{{ TAGS_URL | default('tags.html') }}">{{ gettext('Tags', DEFAULT_LANG) }}</a>
-        <a href="{{ SITEURL }}/{{ AUTHORS_URL | default('authors.html') }}">{{ gettext('Authors', DEFAULT_LANG) }}</a>
+        <a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">{{ 'Archives'|gettext(DEFAULT_LANG) }}</a>
+        <a href="{{ SITEURL }}/{{ CATEGORIES_URL | default('categories.html') }}">{{ 'Categories'|gettext(DEFAULT_LANG) }}</a>
+        <a href="{{ SITEURL }}/{{ TAGS_URL | default('tags.html') }}">{{ 'Tags'|gettext(DEFAULT_LANG) }}</a>
+        <a href="{{ SITEURL }}/{{ AUTHORS_URL | default('authors.html') }}">{{ 'Authors'|gettext(DEFAULT_LANG) }}</a>
         {% if lang_siteurls %}
           {% for lang, url in lang_siteurls.items() %}
           <span><a href="{{ url }}/">{{ lang_code2name(lang) }}</a></span>
@@ -29,10 +29,10 @@
         <li><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
       {%- endfor -%}
       {% endif %}
-      <li><a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">{{ gettext('Archives', DEFAULT_LANG) }}</a></li>
-      <li><a href="{{ SITEURL }}/{{ CATEGORIES_URL | default('categories.html') }}">{{ gettext('Categories', DEFAULT_LANG) }}</a></li>
-      <li><a href="{{ SITEURL }}/{{ TAGS_URL | default('tags.html') }}">{{ gettext('Tags', DEFAULT_LANG) }}</a></li>
-      <li><a href="{{ SITEURL }}/{{ AUTHORS_URL | default('authors.html') }}">{{ gettext('Authors', DEFAULT_LANG) }}</a></li>
+      <li><a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">{{ 'Archives'|gettext(DEFAULT_LANG) }}</a></li>
+      <li><a href="{{ SITEURL }}/{{ CATEGORIES_URL | default('categories.html') }}">{{ 'Categories'|gettext(DEFAULT_LANG) }}</a></li>
+      <li><a href="{{ SITEURL }}/{{ TAGS_URL | default('tags.html') }}">{{ 'Tags'|gettext(DEFAULT_LANG) }}</a></li>
+      <li><a href="{{ SITEURL }}/{{ AUTHORS_URL | default('authors.html') }}">{{ 'Authors'|gettext(DEFAULT_LANG) }}</a></li>
       <!--TODO: add links for Links(optional), and RSS -->
     </ul>
   </div><!--
