--- a/theme/templates/layout/layout.html
+++ b/theme/templates/layout/layout.html
@@ -5,7 +5,7 @@
   Facebook Content Sharing Best Practices
   @see https://developers.facebook.com/docs/sharing/best-practices
 #}
-{%- from 'layout/includes/i18n.html' import gettext, translations_for, lang_code2name -%}
+{%- from 'layout/includes/i18n.html' import translations_for, lang_code2name -%}
 {%- from 'layout/includes/time.html' import Gregorian_calendar -%}
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
