--- a/theme/templates/tag.html
+++ b/theme/templates/tag.html
@@ -1,7 +1,6 @@
 {% extends "layout/group.html" %}
-{%- from 'layout/includes/i18n.html' import gettext -%}
 
-{% set groups_name = gettext('Tags', DEFAULT_LANG) %}
+{% set groups_name = ('Tags'|gettext(DEFAULT_LANG)) %}
 {% set groups_partial_url = TAGS_URL | default('tags.html') %}
 {% set group = tag %}
 {% set group_css_class = "tag" %}
