--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -1,6 +1,5 @@
 {% extends "layout/groups.html" %}
-{%- from 'layout/includes/i18n.html' import gettext -%}
 
 {% set groups = tags %}
-{% set groups_name = gettext('Tags', DEFAULT_LANG) %}
+{% set groups_name = ('Tags'|gettext(DEFAULT_LANG)) %}
 {% set groups_css_class = "tags" %}
