include Google Adsense

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,2 +1,5 @@
 {% extends "layout/layout.html" %}
-{% block content %}{% include "layout/includes/list_articles.html" %}{% endblock %}
+{% block content %}
+{% include "layout/includes/adsense.html" %}
+{% include "layout/includes/list_articles.html" %}
+{% endblock %}
