--- a/theme/templates/layout/includes/top_nav.html
+++ b/theme/templates/layout/includes/top_nav.html
@@ -19,6 +19,8 @@
     <a class="nav-item" href="{{ SITEURL }}/{{ AUTHORS_URL | default('authors.html') }}">{{ 'Authors'|gettext(DEFAULT_LANG) }}</a>
     <!--TODO: add links for Links(optional), and RSS -->
 
+    <span class="vertical-divider"></span>
+
     {% if lang_siteurls %}
       {% for lang, url in lang_siteurls.items() %}
         {% if lang != DEFAULT_LANG %}
