update CSS for Rst

--- a/theme/styling/_css4rst.scss
+++ b/theme/styling/_css4rst.scss
@@ -198,3 +198,7 @@ a.citation-reference, a.footnote-reference {
   vertical-align: super;
   font-size: smaller;
 }
+
+ol.arabic > li {
+  margin-bottom: 1em;
+}
