--- a/theme/templates/layout/content.html
+++ b/theme/templates/layout/content.html
@@ -31,8 +31,8 @@
 {%- if content.og_image -%}{% set OG_IMAGE = content.og_image %}{%- endif -%}
 {%- if content.summary -%}{% set OG_DESCRIPTION = (content.summary|striptags) %}{%- endif -%}
 
-{%- block adsense_page_level -%}
-{%- if content.adsense -%}{% include 'layout/includes/adsense_page_level.html' %}{%- endif -%}
+{%- block adsense_auto_ads -%}
+  {%- if content.adsense -%}{% include 'layout/includes/adsense_auto_ads.html' %}{%- endif -%}
 {%- endblock -%}
 
 {% block content %}
@@ -55,8 +55,9 @@
       {%- endif -%}
     </aside>
     <hr>
-{%- if content.adsense -%}{% include 'layout/includes/adsense.html' %}{%- endif -%}
+
     <div class="main-content">{{ content.content }}</div>
+
     <footer>{% block article_metadata %}{% endblock %}</footer>
   </article>
 </main>
