--- a/theme/templates/layout/layout.html
+++ b/theme/templates/layout/layout.html
@@ -10,6 +10,7 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
+  {%- block adsense_auto_ads -%}{%- endblock -%}
   <meta charset="utf-8">
   <title>{%- block title -%}{{ SITENAME }}{%- endblock -%}</title>
   <meta name="keywords" content="{% block meta_keywords -%}{{ META_KEYWORDS }}{%- endblock %}"/>
@@ -28,7 +29,6 @@
   <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ relpath_to_site(DEFAULT_LANG, main_lang) }}/theme/css/style.css">
 </head>
 <body>
-{%- block adsense_page_level -%}{%- endblock -%}
 {% include 'layout/includes/top_nav.html' %}
 {% if GOOGLE_CSE %}<gcse:search></gcse:search>{% endif %}
 {%- block content -%}{%- endblock -%}
