fix wrong path of web app mnifest

--- a/theme/templates/layout/layout.html
+++ b/theme/templates/layout/layout.html
@@ -28,7 +28,7 @@
 
   <link rel="apple-touch-icon" href="{{ SITEURL }}/{{ relpath_to_site(DEFAULT_LANG, main_lang) }}/extra/Dharma_wheel.png" />
   <!-- manifest.webmanifest or manifest.json ? -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="{{ SITEURL }}/manifest.json" />
 
   <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ relpath_to_site(DEFAULT_LANG, main_lang) }}/theme/css/style.css">
 </head>
