--- a/theme/templates/layout/includes/footer.html
+++ b/theme/templates/layout/includes/footer.html
@@ -2,4 +2,6 @@
   <a href="https://pages.github.com/">Github Pages</a>,
   <a href="http://blog.getpelican.com/">Pelican</a>,
   <a href="https://github.com/Kronuz/pyScss">pyScss</a>.
+  <br>
+  Last Updated: {{ BUILD_TIME | strftime("%b %d, %Y, %H:%M:%S") }} ({{ TIMEZONE }})
 </div>
